--- a/jpj/git_cars3.1.ipynb
+++ b/jpj/git_cars3.1.ipynb
@@ -117,6 +117,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "634611fb-5a7e-4ed7-8ad6-f00877c59f52",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "\n",
+    "URL_DATA = 'https://storage.data.gov.my/transportation/cars_2025.parquet'\n",
+    "\n",
+    "df = pd.read_parquet(URL_DATA)\n",
+    "if 'date' in df.columns: df['date'] = pd.to_datetime(df['date'])\n",
+    "\n",
+    "today_str = datetime.now().strftime('%Y%m%d')\n",
+    "csv_file_path = f\"/Volumes/workspace/mixture/jpj_landing/cars_{today_str}.csv\"\n",
+    "df.to_csv(csv_file_path, index=False)\n",
+    "\n",
+    "display(dbutils.fs.ls(\"/Volumes/workspace/mixture/jpj_landing/\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d07afca7-0d89-4ca3-bda0-1d37d4c45241",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(dbutils.fs.ls(\"/Volumes/workspace/mixture/jpj_archive/\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -444,7 +498,7 @@
    "outputs": [],
    "source": [
     "%sql \n",
-    "select substr(date_reg,1,7) as month_reg, count(*) from df_existing  group by 1 order by 1 desc"
+    "select substr(date_reg,1,7) as month_reg, count(*) from workspace.data_gov_my.cars  group by 1 order by 1 desc"
    ]
   },
   {
@@ -507,7 +561,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7314694060468396,
+     "commandId": 5658657572001064,
      "dataframes": [
       "_sqldf"
      ]
